# gic400.library

./: CMakeLists.txt
src/: gic400_api.c  gic400_distributor.c  gic400_main.c  gic400_private.h
